<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <item
        android:id="@+id/healthprof_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/patient_icon"
        android:title="Health Professionals" />
    <item
        android:id="@+id/report_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/record_icon"
        android:title="Reports" />

    <!-- TODO:: THIS LOGOUT IS TEMPORARY FOR TESTING ONLY    -->
<!--    <item-->
<!--        android:id="@+id/temp_logout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:icon="@drawable/logout_icon"-->
<!--        android:title="Logout" />-->
</menu>