<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_marginBottom="8dp"
    android:id="@+id/listHealthProf">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewAdminName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Admin Name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAdminEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="admin@example.com"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/viewBtn"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="View"
                android:textSize="12sp" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="Update"

                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
